<resources>
    <string name="app_name">Whatsfordinner</string>
    <string name="enterRecipeName">Enter Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="createRecipe">Create Recipe</string>
    <string name="eatingOut">Eating Out</string>
    <string name="breakFast">Break Fast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="updateRecipe">Update Recipe</string>
    <string name="enterIngredientName">Ingredient Name</string>
    <string name="enterUnits">Enter Units </string>
    <string name="enterCount">Enter Count</string>


</resources>
