<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterRecipeName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/recipeDescImage"
            android:src="@drawable/defaultrecipe"
            android:adjustViewBounds="true"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/addImage"
            android:text="+"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:onClick="changeImage"/>
    </LinearLayout>

    <Button
        android:id="@+id/addIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addIngredients"
        android:drawableLeft="@drawable/plus"
        android:onClick="addIngredients"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">


        <LinearLayout
            android:id="@+id/info_box"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_below="@+id/title"
            android:layout_weight="6"
            android:orientation="horizontal"
            android:weightSum="7">

            <EditText
                android:id="@+id/ingredientsName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/enterIngredientName" />

            <EditText
                android:id="@+id/unit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/enterUnits" />

            <EditText
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/enterCount"/>
                </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/removeButton"
                android:background="@drawable/remove"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <Button
        android:id="@+id/createRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createRecipe"
        android:onClick="createRecipe"/>

</LinearLayout>

</ScrollView>